log
Wed 08 May 2024 02:06:01 PM UTC: 
 tests:  1|8
total_score: 0/70
5aec8e5
Wed 08 May 2024 02:10:41 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
40e4558
Wed 08 May 2024 02:17:39 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|7
total_score: 5/70
3bbd506
Wed 08 May 2024 02:31:36 PM UTC: 
 treemap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  4|7
total_score: 5/70
37e6c52
Wed 08 May 2024 02:39:07 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
66bd0f2
Wed 08 May 2024 02:41:26 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:121:1: error: control reaches end of non-void function [-Werror=return-type]
  121 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c90d140
Wed 08 May 2024 03:21:37 PM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  11|6
total_score: 15/70
cf87f07
Wed 08 May 2024 03:24:10 PM UTC: 
 treemap.c | 23 +++++++++--------------
 1 file changed, 9 insertions(+), 14 deletions(-)
 tests:  12|6
total_score: 15/70
7e7240f
Wed 08 May 2024 03:25:17 PM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
50488ad
Wed 08 May 2024 03:28:19 PM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
cf21b1e
Wed 08 May 2024 03:29:34 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
d5d2af3
Wed 08 May 2024 03:30:41 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
d32432c
Wed 08 May 2024 03:32:18 PM UTC: 
 treemap.c | 53 ++++++++++++++++++-----------------------------------
 1 file changed, 18 insertions(+), 35 deletions(-)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
78e0d87
Wed 08 May 2024 03:34:02 PM UTC: 
 treemap.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
feeb913
Wed 08 May 2024 03:39:18 PM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
108aa60
Wed 08 May 2024 03:41:46 PM UTC: 
 treemap.c | 24 +++++++++++++++++++-----
 1 file changed, 19 insertions(+), 5 deletions(-)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
f74a57a
Wed 08 May 2024 03:45:07 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  16|4
total_score: 30/70
f6dce86
Wed 08 May 2024 03:46:30 PM UTC: 
 treemap.c | 32 +++++++++++++++++++++++++-------
 1 file changed, 25 insertions(+), 7 deletions(-)
 tests:  18|3
total_score: 40/70
6e81c0c
Wed 08 May 2024 03:49:01 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  19|3
total_score: 40/70
d162a80
Wed 08 May 2024 03:50:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
bd9281f
Sat 11 May 2024 06:16:29 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  24|1
total_score: 55/70
5d0d9fb
Sat 11 May 2024 06:21:26 PM UTC: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  29|0
total_score: 70/70
96e615d
